project(pass_dfg)

FILE(GLOB pass_dfg_SOURCE *.cpp)
FILE(GLOB pass_dfg_HEADER *.hpp)

SET(EXELIST "lgdfg")

INCLUDE_DIRECTORIES(${core_SOURCE_DIR})
INCLUDE_DIRECTORIES(../../inou/cfg)

FOREACH(EXE ${EXELIST})
	FILE(GLOB exec_SOURCE "${EXE}.cpp")
	ADD_EXECUTABLE(${EXE} ${exec_SOURCE})
	LIST(REMOVE_ITEM pass_dfg_SOURCE ${exec_SOURCE})
ENDFOREACH(EXE)

ADD_LIBRARY(pass_dfg ${pass_dfg_SOURCE} ${pass_dfg_HEADER})

FOREACH(EXE ${EXELIST})
  TARGET_LINK_LIBRARIES(${EXE} pass_dfg inou_cfg core)
  TARGET_LINK_LIBRARIES(${EXE} ${BOOST_LIBS} -lpthread)
ENDFOREACH(EXE)

